fix(build,core): restore caseIndent and clear checkstyle + forbiddenApis
CI got past compilation and hit :babel:checkstyleTest. The cause was a
config regression, not the code: 6444c23d6 changed the checkstyle
Indentation caseIndent from upstream's 0 to 2, which contradicts the
case-at-switch-level style the whole codebase is written in. That single
value is what produced thousands of Indentation violations. Restored to 0,
and the handful of files reformatted to the wrong value while it was in
force are put back.

With indentation settled the rest of the checks are cleared:

- Long lines wrapped across core's model, util and jdbc classes, and
  JsonConstraints given the private constructor a utility class needs.
- ModelHandler read the model with new String(bytes, UTF_8), which
  IllegalInstantiation forbids; use Guava's CharSource instead.
- EnvironmentVariableSubstitutor used StringBuffer and a locale-less
  String.format. Matcher.appendReplacement takes a StringBuilder from
  Java 9 on, which the --release 11 baseline now guarantees, so switch to
  StringBuilder and pass Locale.ROOT.
- Sources built URLs with new URL(String); use new URI(String).toURL() and
  widen the catches to URISyntaxException.
- ModelHandlerConstraintsTest called String#getBytes() with the default
  charset; pass UTF_8.
- BSL modules are exempt from checkstyle and forbiddenApis, the same
  exemption askamerica-engine already declares for itself, driven by the
  .ratignore list. trino-calcite-base was missing from that list.

Verified: ./gradlew build -x test passes across every module.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>